[0.1.0] Added gateway controller with basic integration with rabbit

--- a/services/gateway/config/exampleConfig.json
+++ b/services/gateway/config/exampleConfig.json
@@ -1,4 +1,7 @@
 {
+  "amqpURI": "rabbitUrl",
+  "corsOrigin": "*",
   "httpPort": 80,
-  "corsOrigin": "*"
+  "token": "mainToken",
+  "refToken": "refreshToken"
 }
