--- a/services/gateway/.eslintrc.json
+++ b/services/gateway/.eslintrc.json
@@ -85,6 +85,7 @@
     "require-jsdoc": 2,
     "semi": 2,
     "@typescript-eslint/explicit-function-return-type": 2,
+    "@typescript-eslint/no-dynamic-delete": 0,
     "@typescript-eslint/no-empty-interface": 2,
     "@typescript-eslint/no-explicit-any": 2,
     "@typescript-eslint/no-extraneous-class": 0,
