--- a/services/gateway/package.json
+++ b/services/gateway/package.json
@@ -14,7 +14,7 @@
     "build": "tsc -p tsconfig.release.json",
     "build:watch": "tsc -w -p tsconfig.release.json",
     "lint": "cross-env NODE_ENV=development eslint . --ext .ts",
-    "listErrors": "node_modules/.bin/tsc --noEmit --skipLibCheck",
+    "listErrors": "node_modules/.bin/tsc --skipLibCheck",
     "lintStaged": "npx lint-staged"
   },
   "lint-staged": {
@@ -26,6 +26,7 @@
     ]
   },
   "dependencies": {
+    "amqplib": "^0.10.3",
     "chalk": "^4.1.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -36,6 +37,7 @@
     "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
+    "@types/amqplib": "^0.10.0",
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
