[0.1.03] Added basic validation of users routes, added tests of user routes, fixed incorrect path of rabbitMQ

--- a/services/gateway/.dockerignore
+++ b/services/gateway/.dockerignore
@@ -19,5 +19,9 @@
 **/obj
 **/secrets.dev.yaml
 **/values.dev.yaml
+**/tests
+jest.config.default.ts
+jest.config.e2e.ts
+jest.config.ts
+jest.config.unit.ts
 README.md
-
