--- a/package.json
+++ b/package.json
@@ -7,12 +7,10 @@
   "private": false,
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "husky install"
   },
   "devDependencies": {
-    "husky": "^8.0.2",
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "husky": "^8.0.2"
   }
 }
-
