--- a/services/gateway/tsconfig.json
+++ b/services/gateway/tsconfig.json
@@ -41,7 +41,8 @@
     "sourceMap": true,
     "target": "ES2022",
     "types": [
-      "node"
+      "node",
+      "jest"
     ]
   },
   "include": [
