--- a/services/users/package.json
+++ b/services/users/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "gateway",
-  "version": "0.1.1",
-  "description": "Gateway",
-  "productName": "Gateway",
+  "name": "users",
+  "version": "0.1.0",
+  "description": "Users",
+  "productName": "Users",
   "author": "https://github.com/Virus288",
   "license": "Apache-2.0",
   "private": false,
@@ -32,11 +32,10 @@
   },
   "dependencies": {
     "amqplib": "^0.10.3",
+    "bcrypt": "^5.1.0",
     "chalk": "^4.1.2",
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
-    "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.7.3",
     "node": "^18.7.0",
     "winston": "^3.8.2",
     "winston-daily-rotate-file": "^4.7.1"
@@ -44,9 +43,7 @@
   "devDependencies": {
     "@jest/globals": "^29.3.1",
     "@types/amqplib": "^0.10.0",
-    "@types/cookie-parser": "^1.4.3",
-    "@types/cors": "^2.8.12",
-    "@types/express": "^4.17.13",
+    "@types/bcrypt": "^5.0.0",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^18.6.2",
     "@typescript-eslint/eslint-plugin": "^5.42.1",
