[0.2.1] Added e2e tests for users, added unit tests for gateway, added db mocking system for users

--- a/services/gateway/.dockerignore
+++ b/services/gateway/.dockerignore
@@ -19,10 +19,6 @@
 **/obj
 **/secrets.dev.yaml
 **/values.dev.yaml
-**/tests
+__tests__
 node_modules
-jest.config.default.ts
-jest.config.e2e.ts
-jest.config.ts
-jest.config.unit.ts
 README.md
