--- a/services/users/.dockerignore
+++ b/services/users/.dockerignore
@@ -19,10 +19,6 @@
 **/obj
 **/secrets.dev.yaml
 **/values.dev.yaml
-**/tests
+__tests__
 node_modules
-jest.config.default.ts
-jest.config.e2e.ts
-jest.config.ts
-jest.config.unit.ts
 README.md
