--- a/services/users/tsconfig.json
+++ b/services/users/tsconfig.json
@@ -12,7 +12,7 @@
     "forceConsistentCasingInFileNames": true,
     "importHelpers": true,
     "incremental": true,
-    "isolatedModules": true,
+    "isolatedModules": false,
     "lib": [
       "ES6",
       "ESNext"
